# AssetVault

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Info.plist.in  README.md  compile_commands.json  download_deps.sh  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.github/workflows/: macos-app.yml  windows-app.yml
crashes/: enable_crash_dumps.reg  find_crashes.ps1
db/: assets.db
prototype/: package-lock.json  package.json  tailwind.config.js
prototype/src/: App.jsx  index.css
readmes/: DATABASE.md  DATABASE_README.md  DEPENDENCIES.md  FILE_WATCHER.md  RENDER.md  dear_cursor.md
resources/: app_icon.rc
scripts/: check_crash_logs.bat  cleanup-windows-binaries.sh  downscale_pixel_art.py  embed_assets.py  enable_app_verifier.bat  generate_embedded_assets.py  reset_app_data.sh
src/: 3d.cpp  3d.h  animation.cpp  animation.h  asset.cpp  asset.h  asset_index.h  audio_manager.cpp  audio_manager.h  config.cpp  config.h  database.cpp  database.h  drag_drop.h  drag_drop_macos.mm  drag_drop_windows.cpp  event_processor.cpp  event_processor.h  file_watcher.cpp  file_watcher.h  file_watcher_fswatch.cpp  file_watcher_macos.cpp  file_watcher_windows.cpp  fonts.cpp  fonts.h  index.cpp  index.h  logger.h  main.cpp  run.cpp  run.h  search.cpp  search.h  services.cpp  services.h  stb_vorbis_impl.cpp  texture_manager.cpp  texture_manager.h  theme.h  ui.cpp  (+4 more)
src/builder/: embedded_assets.cpp  embedded_assets.h
src/shaders/: model.frag  model.vert  skeleton.frag  skeleton.vert  unified.frag  unified.vert
src/ui/: components.cpp  components.h  preview_panel.cpp  results_panel.cpp  search_panel.cpp  tree_panel.cpp  ui.cpp  ui.h
tests/: test_database.cpp  test_db.cpp  test_event_processor.cpp  test_file_watcher.cpp  test_file_watcher_macos.cpp  test_file_watcher_windows.cpp  test_helpers.cpp  test_helpers.h  test_integration.cpp  test_rendering.cpp  test_search.cpp  test_search_index.cpp  test_ui.cpp  test_utils.cpp
tests/files/: README.md
tests/files/delete_test_dir/subdir1/: nested2.fbx
tests/files/external_dir/: external_file.txt
tests/files/move_test_dir/: move1.txt
